add sql for ordering